/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2001-12-15 13:43 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * contrib/libct/Makefile
     ! Fixed tabs, EOF

   * contrib/libgt/Makefile
     ! Fixed LIBNAME

   * source/vm/classes.c
     ! missing "static" keyword

2001-12-15 12:32 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * TODO
     * Updated

   * source/rtl/dummy.prg
     - Removed commented line.

2001-12-15 12:24 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * include/hbver.h
     + Jumped the version number and date.

   * doc/whatsnew.doc
     + Added new version (no items yet)

   * source/vm/dynlibhb.c
     ! Fixed for non Win32 platform to return 
       compatible values.

   * doc/howtomak.txt
     - Removed TASM as a requirement.

2001-12-15 12:11 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * include/hbinkey.ch
   * source/compiler/cmdcheck.c 
   * source/compiler/harbour.c 
   * source/compiler/hbpcode.c
     (I couldn't complete this one, since it's far too messy)
   * source/debug/dbgtmenu.prg 
   * source/debug/dbgtmitm.prg 
   * source/debug/dbgtobj.prg 
   * source/debug/dbgtwin.prg 
   * source/debug/dbgwa.prg 
   * source/debug/debugger.prg 
   * source/rtl/perfuncs.prg
   * source/rtl/persist.prg 
   * source/rtl/profiler.prg
   * source/rtl/gtsln/gtsln.c 
   * source/rtl/gtstd/gtstd.c 
     ! Basic cleanups "s_" prefix, tabs, = -> :=

2001-12-15 11:37 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/rtl/isprint.c
     ! Fixed DJGPP warning for DOS branch.

   * source/rtl/fstemp.c
     ! One unused #include added. Well, it was used.

2001-12-15 10:53 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/rtl/tbcolumn.prg
     ! Fixed case when heading parameter was NIL 
       in TBColumnNew() or TBColumn():New()
