@@ -8,6 +8,11 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+2001-12-15 13:58 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>
+
+   * source/rtl/dir.c
+     ! Fix for BCC by Luiz.
+
 2001-12-15 13:43 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>
 
    * contrib/libct/Makefile
